--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "rock paper scissors game",
   "main": "server.js",
   "scripts": {
-    "start": "node server | webpack --config webpack.config.dev.js --watch",
+    "start": "node server",
+    "dev": "node server | webpack --config webpack.config.dev.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --config webpack.config.dev.js --watch",
     "build": "webpack --config webpack.config.prod.js"
